Creating training loop

--- a/3_pytorch_classification.ipynb
+++ b/3_pytorch_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN5woATsfKracti2Hlgve13",
+      "authorship_tag": "ABX9TyN/PmOoc2CeCJebDtuTPBks",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eQRArdk8Fy6m",
-        "outputId": "b65d295a-5fa6-465d-a1be-d2205d8753b3"
+        "outputId": "17f4466e-5efa-46b2-da7a-a2049d2f5dd8"
       },
       "execution_count": 4,
       "outputs": [
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8aDfuBx5F1fq",
-        "outputId": "59dd61ee-f184-47b3-be59-55c3a291b199"
+        "outputId": "1e9f3faa-ab18-4df7-8095-7eb4b57ac341"
       },
       "execution_count": 5,
       "outputs": [
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "d1474412-a0c6-493b-e30a-5759ab07de32"
+        "outputId": "d2943cbc-dd86-4480-d78d-5be26589f30d"
       },
       "execution_count": 6,
       "outputs": [
@@ -173,7 +173,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3d24fcab-2e6a-4311-9cae-9430089c833d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -264,7 +264,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d24fcab-2e6a-4311-9cae-9430089c833d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -316,12 +316,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3d24fcab-2e6a-4311-9cae-9430089c833d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25');\n",
+              "        const element = document.querySelector('#df-3d24fcab-2e6a-4311-9cae-9430089c833d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -341,8 +341,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-566f3564-6fcb-47d0-9b59-1e9ee6edc6d4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-566f3564-6fcb-47d0-9b59-1e9ee6edc6d4')\"\n",
+              "<div id=\"df-8b174e35-c00c-4ea7-a32c-87daecbd4728\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8b174e35-c00c-4ea7-a32c-87daecbd4728')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -461,7 +461,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-566f3564-6fcb-47d0-9b59-1e9ee6edc6d4 button');\n",
+              "        document.querySelector('#df-8b174e35-c00c-4ea7-a32c-87daecbd4728 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -497,7 +497,7 @@
           "height": 447
         },
         "id": "BvBFtezt5QKM",
-        "outputId": "a8cfa251-256b-4b7f-e322-d9b9fb4be33b"
+        "outputId": "dce4a2d8-1208-41ea-e81f-d9df65a9b7ed"
       },
       "execution_count": 7,
       "outputs": [
@@ -505,7 +505,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x78a38b823820>"
+              "<matplotlib.collections.PathCollection at 0x7ca271b14c70>"
             ]
           },
           "metadata": {},
@@ -551,7 +551,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-LBzXhrMkVId",
-        "outputId": "ee404adc-0e6f-4db2-ffe8-ca488376fbca"
+        "outputId": "38827ef0-66fd-43cc-eb6a-9e7b095f0b3e"
       },
       "execution_count": 8,
       "outputs": [
@@ -577,7 +577,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IzcJBNB9kdtz",
-        "outputId": "1987a917-8a51-4d2a-aed2-4daf20b73392"
+        "outputId": "cb5ed5c6-4ae7-468c-b300-130af4dc9671"
       },
       "execution_count": 9,
       "outputs": [
@@ -615,7 +615,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pj8kmuZBkg6w",
-        "outputId": "796e38ea-d8f4-4e51-cb45-3de24c045f7b"
+        "outputId": "a27f9821-ca14-4d0c-f4bd-a27ddc095d5b"
       },
       "execution_count": 10,
       "outputs": [
@@ -653,7 +653,7 @@
           "height": 35
         },
         "id": "OZ-n7cJnlKVS",
-        "outputId": "00566047-3d85-464a-bbf0-c31fa005338c"
+        "outputId": "949b4bff-8f35-48c9-aa24-fe38366cb5ef"
       },
       "execution_count": 11,
       "outputs": [
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ri1n21o-ldPv",
-        "outputId": "0dfb044b-4355-473f-9912-7ce190299bd2"
+        "outputId": "cc80ba0d-fabc-4fda-f06c-70e7a4a06f93"
       },
       "execution_count": 12,
       "outputs": [
@@ -721,7 +721,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Eqyx8DelkJD",
-        "outputId": "20d48202-4dc3-42b4-c429-cbb939491721"
+        "outputId": "d3760057-39d8-4261-d272-591d01f7e11f"
       },
       "execution_count": 14,
       "outputs": [
@@ -752,7 +752,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Vpcpxzsl0SO",
-        "outputId": "66864b6d-6dff-48f2-82ce-a35b7a45644e"
+        "outputId": "6f15532f-1cee-4c46-ec20-49b94da80c3f"
       },
       "execution_count": 15,
       "outputs": [
@@ -795,7 +795,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0n85S9C2Aa02",
-        "outputId": "9659f47c-cabf-41bd-ee89-29babd6b0784"
+        "outputId": "142deb9b-749a-4f3c-d9dc-27270c4fd7a9"
       },
       "execution_count": 17,
       "outputs": [
@@ -845,7 +845,7 @@
           "height": 35
         },
         "id": "_bXjqJmqB4ks",
-        "outputId": "3e18669a-333d-4093-a2c9-6401401c8564"
+        "outputId": "3ce8a8d3-08d1-4e89-8a74-0607407ba5a6"
       },
       "execution_count": 18,
       "outputs": [
@@ -853,7 +853,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'cuda'"
+              "'cpu'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
@@ -909,7 +909,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9N9cv6t4IIvX",
-        "outputId": "e67ee1b8-c1a7-4a06-99f4-4a3b8e39887b"
+        "outputId": "4d651eb3-1bed-4323-9dda-392c8ed6e3d5"
       },
       "execution_count": 19,
       "outputs": [
@@ -938,7 +938,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T1yRp7ElJWG8",
-        "outputId": "7ff4b1a4-f199-442d-9a78-d4902fd383c3"
+        "outputId": "f255c6a5-dfe4-44a0-d75d-6033586c4e3f"
       },
       "execution_count": 20,
       "outputs": [
@@ -946,7 +946,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "device(type='cuda', index=0)"
+              "device(type='cpu')"
             ]
           },
           "metadata": {},
@@ -970,7 +970,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "695dd200-6439-4040-d268-4bc4585cca64"
+        "outputId": "7f3c14ff-040c-45bc-9fd8-5532acef2c63"
       },
       "execution_count": 21,
       "outputs": [
@@ -999,7 +999,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OSOssJrvnfj4",
-        "outputId": "f91feb31-3598-4cb0-d164-cda7533d093c"
+        "outputId": "3a65cdea-5742-4cf7-a46d-6319307c073f"
       },
       "execution_count": 22,
       "outputs": [
@@ -1008,16 +1008,15 @@
           "data": {
             "text/plain": [
               "OrderedDict([('0.weight',\n",
-              "              tensor([[ 0.6809,  0.5135],\n",
-              "                      [-0.6466,  0.3276],\n",
-              "                      [ 0.3394, -0.3795],\n",
-              "                      [-0.1207, -0.0545],\n",
-              "                      [-0.1046,  0.3043]], device='cuda:0')),\n",
-              "             ('0.bias',\n",
-              "              tensor([-0.6434, -0.6185, -0.4137, -0.5139,  0.1854], device='cuda:0')),\n",
+              "              tensor([[ 0.3383, -0.5259],\n",
+              "                      [-0.0267,  0.2989],\n",
+              "                      [ 0.1996, -0.1978],\n",
+              "                      [-0.6165,  0.1220],\n",
+              "                      [ 0.3428,  0.7044]])),\n",
+              "             ('0.bias', tensor([ 0.1687, -0.5459,  0.4405, -0.2077,  0.6048])),\n",
               "             ('1.weight',\n",
-              "              tensor([[-0.3272,  0.3920, -0.2624,  0.3554, -0.0423]], device='cuda:0')),\n",
-              "             ('1.bias', tensor([-0.0160], device='cuda:0'))])"
+              "              tensor([[ 0.3379, -0.0009, -0.0279, -0.3485,  0.2293]])),\n",
+              "             ('1.bias', tensor([0.1052]))])"
             ]
           },
           "metadata": {},
@@ -1041,7 +1040,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yPWZ_cU5jhSP",
-        "outputId": "4e63f82f-cd73-4af2-a20b-6a3ed77d7604"
+        "outputId": "f034346b-180a-4df0-833a-1542ecef4cbb"
       },
       "execution_count": 23,
       "outputs": [
@@ -1053,16 +1052,16 @@
             "Length of test samples: 200, Shape: torch.Size([200, 2])\n",
             "\n",
             "First 10 predictions:\n",
-            " tensor([[ 0.1157],\n",
-            "        [-0.1125],\n",
-            "        [ 0.2859],\n",
-            "        [ 0.0692],\n",
-            "        [-0.3934],\n",
-            "        [-0.5274],\n",
-            "        [-0.6315],\n",
-            "        [-0.7304],\n",
-            "        [ 0.3143],\n",
-            "        [-0.1353]], device='cuda:0')\n",
+            " tensor([[0.1741],\n",
+            "        [0.3164],\n",
+            "        [0.0956],\n",
+            "        [0.1951],\n",
+            "        [0.5631],\n",
+            "        [0.6463],\n",
+            "        [0.6764],\n",
+            "        [0.7549],\n",
+            "        [0.0760],\n",
+            "        [0.3311]])\n",
             "\n",
             "First 10 labels:\n",
             " tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
@@ -1131,14 +1130,200 @@
       "metadata": {
         "id": "koIY6roYWzr1"
       },
-      "execution_count": 26,
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Train model\n",
+        "\n",
+        "To train our model we're going to make a training loop with the following steps:\n",
+        "\n",
+        "1. Forward pass - compute predictions\n",
+        "2. Calculate the loss\n",
+        "3. Optimizer zero grad\n",
+        "4. Loss Backward (backpropagation)\n",
+        "5. Optimizer step (gradient descent)"
+      ],
+      "metadata": {
+        "id": "BeVPoFzUW0Cp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.1 Going from raw lpgits -> prediction probabilities -> prediction labels\n",
+        "\n",
+        "Our model outputs are going to be raw **logits**.\n",
+        "\n",
+        "We can convert these **logits** into prediction probabilities by passing them to some kind of activation function (e.g. sigmoid for binary classification and softmax for multiclass classification).\n",
+        "\n",
+        "Then we can convert our model's prediction probabilities to **prediction labels** by either rounding them or taking the `argmax()`."
+      ],
+      "metadata": {
+        "id": "erK_R3Q9nqwJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the first 5 outputs of the forward pass on the test data\n",
+        "model_0.eval()\n",
+        "with torch.inference_mode():\n",
+        "  y_logits = model_0(X_test.to(device))[:5]\n",
+        "y_logits"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GKIhzkJgq_nt",
+        "outputId": "6e2bcd4b-eaf4-456f-973e-c1d729e54f68"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1741],\n",
+              "        [0.3164],\n",
+              "        [0.0956],\n",
+              "        [0.1951],\n",
+              "        [0.5631]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G4-pey-KrIxL",
+        "outputId": "5c29a6b3-b111-4c5c-f2ba-554d87afcd5b"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1., 0., 1., 0., 1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use the sigmoid activation function on our model logits to turn them into prediction probabilities\n",
+        "y_pred_probs = torch.sigmoid(y_logits)\n",
+        "y_pred_probs"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jrm9w-Jvr6JE",
+        "outputId": "1c6e1383-2077-4081-a6de-73ff050b6c75"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5434],\n",
+              "        [0.5784],\n",
+              "        [0.5239],\n",
+              "        [0.5486],\n",
+              "        [0.6372]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For our prediction probability values, we need to perform a range-style rounding on them:\n",
+        "* `y_pred_probs` >= 0.5, `y=1` (class 1)\n",
+        "* `y_pred_probs` < 0.5, `y=0` (class 0)"
+      ],
+      "metadata": {
+        "id": "8UgPeRZvyAwQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.round(y_pred_probs)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YTaQpFE6tV11",
+        "outputId": "d981b61e-741f-4159-abc7-800c99ecb89f"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.],\n",
+              "        [1.],\n",
+              "        [1.],\n",
+              "        [1.],\n",
+              "        [1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find the predicted labels\n",
+        "y_preds = torch.round(y_pred_probs)\n",
+        "\n",
+        "# In full\n",
+        "y_preds = torch.round(torch.sigmoid(model_0(X_test.to(device))[:5]))\n",
+        "\n",
+        "# Check for equality\n",
+        "prinr(torch.eq(y_preds.squeeze(), y_pred_labels.squeeze()))\n",
+        "\n",
+        "# Get rid of extra dimension\n",
+        "y_preds.squeeze()"
+      ],
+      "metadata": {
+        "id": "oXUsjfjFx7OL"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BeVPoFzUW0Cp"
+        "id": "a9741bTJ0ftW"
       },
       "execution_count": null,
       "outputs": []
