instantiated our model

--- a/4_pytorch_computer_vision.ipynb
+++ b/4_pytorch_computer_vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOL7D349GWz6UwJDjMfIU+p",
+      "authorship_tag": "ABX9TyOWFbV4OCZMRzAjU7iERafj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DR--0u3CoTej",
-        "outputId": "1a2b6be5-1e75-43b5-dd1f-2233f63be8c4"
+        "outputId": "d5783926-9236-4b12-f430-9bfc62b8b2d6"
       },
       "execution_count": 1,
       "outputs": [
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p5pC7FTxoNiM",
-        "outputId": "eda9e61f-55b8-487e-b951-2d94fd440168"
+        "outputId": "bf0165e7-8656-480d-9583-9053fdc1987b"
       },
       "execution_count": 2,
       "outputs": [
@@ -179,7 +179,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 26.4M/26.4M [00:11<00:00, 2.30MB/s]\n"
+            "100%|██████████| 26.4M/26.4M [00:07<00:00, 3.76MB/s]\n"
           ]
         },
         {
@@ -196,7 +196,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 29.5k/29.5k [00:00<00:00, 200kB/s]\n"
+            "100%|██████████| 29.5k/29.5k [00:00<00:00, 298kB/s]\n"
           ]
         },
         {
@@ -213,7 +213,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4.42M/4.42M [00:01<00:00, 3.76MB/s]\n"
+            "100%|██████████| 4.42M/4.42M [00:02<00:00, 1.74MB/s]\n"
           ]
         },
         {
@@ -230,7 +230,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 5.15k/5.15k [00:00<00:00, 16.4MB/s]"
+            "100%|██████████| 5.15k/5.15k [00:00<00:00, 19.3MB/s]\n"
           ]
         },
         {
@@ -238,13 +238,6 @@
           "name": "stdout",
           "text": [
             "Extracting data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to data/FashionMNIST/raw\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
             "\n"
           ]
         }
@@ -262,7 +255,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rykjsWoqoNvr",
-        "outputId": "c694cedb-c705-4e9a-bffe-3d459e3abd12"
+        "outputId": "f475f2ae-0a72-4979-e42e-5261ca98550e"
       },
       "execution_count": 3,
       "outputs": [
@@ -414,7 +407,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fYrKaCoLqsfb",
-        "outputId": "cbfde21c-18da-403d-85fc-a24ef438e56c"
+        "outputId": "96fb08cb-91bf-4883-b8a9-7a891bf41466"
       },
       "execution_count": 4,
       "outputs": [
@@ -441,7 +434,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5_ckaHmAqwQs",
-        "outputId": "c9504467-ef9b-4ee4-fbf2-46f92f3966c7"
+        "outputId": "93ab2bd0-d60a-458b-9870-796f89660fa8"
       },
       "execution_count": 5,
       "outputs": [
@@ -469,7 +462,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vJTTdDI5q0b7",
-        "outputId": "e1f57ad5-44bb-408d-c233-1f49b65b5e9d"
+        "outputId": "68875fd9-c43f-4917-9799-65fa7bd3db44"
       },
       "execution_count": 6,
       "outputs": [
@@ -517,7 +510,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 469
         },
-        "outputId": "1b779730-0bdb-44be-b860-fa4fafd64006"
+        "outputId": "d6b1bacb-d5fa-4d0b-920f-a496e7fadfa9"
       },
       "execution_count": 7,
       "outputs": [
@@ -552,7 +545,7 @@
           "height": 452
         },
         "id": "oBDIJcEwIoiM",
-        "outputId": "4e89420b-0a03-4983-879e-e41bbc5d4327"
+        "outputId": "a6832cf8-0921-473a-8841-b1ec1d830f60"
       },
       "execution_count": 8,
       "outputs": [
@@ -589,7 +582,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 752
         },
-        "outputId": "a7bfdee4-a652-4656-d1da-dcdbad0680b9"
+        "outputId": "45d94518-0c85-4a97-bc81-7f9d092e2f7a"
       },
       "execution_count": 9,
       "outputs": [
@@ -689,15 +682,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NIgwxZuWE0p",
-        "outputId": "72ccf86d-5516-46f9-8a6d-d14d646fb24d"
+        "outputId": "deddba64-8644-4fcf-f67b-ca17a080ee02"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Dataloaders: (<torch.utils.data.dataloader.DataLoader object at 0x7cd596b2d450>, <torch.utils.data.dataloader.DataLoader object at 0x7cd5968f69e0>)\n",
+            "Dataloaders: (<torch.utils.data.dataloader.DataLoader object at 0x7c6e89883340>, <torch.utils.data.dataloader.DataLoader object at 0x7c6e898630a0>)\n",
             "Length of train dataloader: 1875 batches of 32\n",
             "Length of test dataloader: 313 batches of 32\n"
           ]
@@ -716,9 +709,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "05S7-dr1dy7A",
-        "outputId": "84b7b416-885c-4fbd-a36e-d6e76407169a"
+        "outputId": "8c27e9a4-5518-4317-8907-51b9998c2c58"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +721,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -752,9 +745,9 @@
           "height": 480
         },
         "id": "ju1W_UTXXhnj",
-        "outputId": "5d0a42b1-c7e2-43bb-9715-bcc0771a27be"
+        "outputId": "793aa01e-44bd-4861-e303-bd55e6b9ad2a"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,10 +771,172 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Model 0: Build a baseline model\n",
+        "\n",
+        "When starting to build a series of machine learning modelling experiments, it's best practice to start with a baseline model.\n",
+        "\n",
+        "A baseline model is a simple model you will try and improve upon with subsequent models/experiments.\n",
+        "\n",
+        "In other words: start simply and add complexity when necessary."
+      ],
+      "metadata": {
+        "id": "3VhjIQigfGB4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# device agnostic code\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "mrWKH7iiWScj",
+        "outputId": "bdfac9e2-e162-4f36-d17c-fbde9357aba4"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'cpu'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a flatten layer\n",
+        "flatten_model = nn.Flatten()\n",
+        "\n",
+        "# Get a single sample\n",
+        "x= train_features_batch[0]\n",
+        "\n",
+        "# Flatten the sample\n",
+        "output = flatten_model(x)\n",
+        "\n",
+        "# Print out what happened\n",
+        "print(f\"Shape before flattening: {x.shape} -> [color_channels, height, width]\")\n",
+        "print(f\"Shape after flattening: {output.shape} -> [color_channels*height*width]\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ifz5j1ukhCnm",
+        "outputId": "a666a8a3-0a37-4f7b-fc93-e595e70488d8"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape before flattening: torch.Size([1, 28, 28]) -> [color_channels, height, width]\n",
+            "Shape after flattening: torch.Size([1, 784]) -> [color_channels*height*width]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch import nn\n",
+        "class FashionMNISTModelV0(nn.Module):\n",
+        "    def __init__(self, input_shape: int, hidden_units: int, output_shape: int):\n",
+        "        super().__init__()\n",
+        "        self.layer_stack = nn.Sequential(\n",
+        "            nn.Flatten(),\n",
+        "            nn.Linear(in_features=input_shape, out_features=hidden_units),\n",
+        "            nn.Linear(in_features=hidden_units, out_features=output_shape)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return self.layer_stack(x)\n",
+        "\n",
+        "# Create an instance of the model\n",
+        "torch.manual_seed(42)\n",
+        "model_0 = FashionMNISTModelV0(\n",
+        "    input_shape=784, # 28x28 image\n",
+        "    hidden_units=10, # how many units in the hidden layer\n",
+        "    output_shape=len(class_names) # one for every class\n",
+        ").to(device)\n",
+        "model_0"
+      ],
+      "metadata": {
+        "id": "lmYB2H3GhmIW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5355f702-8a4e-4187-b7aa-0dc0700a589d"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "FashionMNISTModelV0(\n",
+              "  (layer_stack): Sequential(\n",
+              "    (0): Flatten(start_dim=1, end_dim=-1)\n",
+              "    (1): Linear(in_features=784, out_features=10, bias=True)\n",
+              "    (2): Linear(in_features=10, out_features=10, bias=True)\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_x = torch.rand((1, 28, 28)).to(device)\n",
+        "model_0(dummy_x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AXEme9zrVxbb",
+        "outputId": "b06b4bde-4a14-410e-ae51-fcde5e00bb97"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.1680,  0.2322,  0.2701,  0.0274,  0.6386,  0.3092,  0.3212,  0.2810,\n",
+              "         -0.1581, -0.1608]], grad_fn=<AddmmBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3VhjIQigfGB4"
+        "id": "bTRh_bXcWd3_"
       },
       "execution_count": null,
       "outputs": []
