Added loss function and optimizer

--- a/4_pytorch_computer_vision.ipynb
+++ b/4_pytorch_computer_vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWFbV4OCZMRzAjU7iERafj",
+      "authorship_tag": "ABX9TyOHqL/0DQ4mYg+tlpDIk70R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -933,10 +933,87 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.1 Setup loss, optimizer and evaluation metrics\n",
+        "\n",
+        "* Loss function - our loss function will be `nn.CrossEntropyLoss()` because we're dealing with multi-class classification.\n",
+        "* Optimizer - our optimizer will be `torch.optim.SGD()` because we're using stochastic gradient descent.\n",
+        "* Evaluation metrics - using accuracy as our evaluation metric."
+      ],
+      "metadata": {
+        "id": "bTRh_bXcWd3_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Download helper functions from Learn PyTorch repo\n",
+        "if Path(\"helper_functions.py\").is_file():\n",
+        "  print(\"helper_functions.py already exists, skipping download\")\n",
+        "else:\n",
+        "  print(\"Downloading helper_functions.py\")\n",
+        "  request = requests.get(\"https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/helper_functions.py\")\n",
+        "  with open(\"helper_functions.py\", \"wb\") as f:\n",
+        "    f.write(request.content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TndS33fEX4MT",
+        "outputId": "b874bae8-479d-4ab5-c10d-0c280b05608f"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading helper_functions.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import accuracy metric\n",
+        "from helper_functions import accuracy_fn\n",
+        "\n",
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.SGD(params=model_0.parameters(),\n",
+        "                            lr=0.1)"
+      ],
+      "metadata": {
+        "id": "WPYiX_gfYrwM"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.2 Creating a function to time our experiments\n",
+        "\n",
+        "Machine learning is very experimental.\n",
+        "\n",
+        "Two of the main things you'll often want to track are:\n",
+        "1. Model's performance (loss and accuracy values etc)\n",
+        "2. How fast it runs"
+      ],
+      "metadata": {
+        "id": "1Tre5Tl_ZHgc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "bTRh_bXcWd3_"
+        "id": "Snt7OUudZfUF"
       },
       "execution_count": null,
       "outputs": []
