--- a/4_pytorch_computer_vision.ipynb
+++ b/4_pytorch_computer_vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrujogxQ0+Sa8hVBg2Kly2",
+      "authorship_tag": "ABX9TyMDKBl6P902cYOn8aOHb59U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2956,10 +2956,212 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 7.1 Stepping through `nn.Conv2d()`\n",
+        "\n",
+        "\n",
+        "See the documentation for `nn.Conv2d` here - https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html"
+      ],
+      "metadata": {
+        "id": "7PbnnawFbYPv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# Create a batch of images\n",
+        "images = torch.rand(size=(5, 3, 28, 28)) # [batch_size, color_channels, height, width]\n",
+        "test_image = images[0]\n",
+        "\n",
+        "print(f\"Image batch shape: {images.shape}\")\n",
+        "print(f\"Single image shape: {test_image.shape}\")\n",
+        "print(f\"Test image:\\n{test_image}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sTy-End5cRL2",
+        "outputId": "15459281-3d22-4a7e-acaa-2fa42eee6227"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image batch shape: torch.Size([5, 3, 28, 28])\n",
+            "Single image shape: torch.Size([3, 28, 28])\n",
+            "Test image:\n",
+            "tensor([[[0.8823, 0.9150, 0.3829,  ..., 0.2695, 0.3588, 0.1994],\n",
+            "         [0.5472, 0.0062, 0.9516,  ..., 0.9103, 0.6440, 0.7071],\n",
+            "         [0.6581, 0.4913, 0.8913,  ..., 0.1591, 0.7653, 0.2979],\n",
+            "         ...,\n",
+            "         [0.8029, 0.2662, 0.2614,  ..., 0.6683, 0.6779, 0.0837],\n",
+            "         [0.0150, 0.2406, 0.8423,  ..., 0.4931, 0.9576, 0.1999],\n",
+            "         [0.5039, 0.7378, 0.1548,  ..., 0.3018, 0.6301, 0.6886]],\n",
+            "\n",
+            "        [[0.2366, 0.0042, 0.7617,  ..., 0.1946, 0.2539, 0.5961],\n",
+            "         [0.6356, 0.6922, 0.7744,  ..., 0.4583, 0.6079, 0.2258],\n",
+            "         [0.6442, 0.0118, 0.1422,  ..., 0.9184, 0.8874, 0.6511],\n",
+            "         ...,\n",
+            "         [0.3880, 0.3186, 0.6964,  ..., 0.6831, 0.2704, 0.9291],\n",
+            "         [0.7386, 0.8284, 0.5660,  ..., 0.3465, 0.2419, 0.3392],\n",
+            "         [0.3217, 0.9783, 0.6918,  ..., 0.3515, 0.4982, 0.6605]],\n",
+            "\n",
+            "        [[0.4890, 0.5231, 0.5633,  ..., 0.1664, 0.6741, 0.2001],\n",
+            "         [0.3426, 0.2617, 0.1598,  ..., 0.3733, 0.7579, 0.6981],\n",
+            "         [0.9136, 0.3976, 0.7355,  ..., 0.0606, 0.4830, 0.2778],\n",
+            "         ...,\n",
+            "         [0.9142, 0.9869, 0.4895,  ..., 0.2492, 0.5637, 0.7931],\n",
+            "         [0.7489, 0.2792, 0.0273,  ..., 0.3172, 0.9907, 0.9064],\n",
+            "         [0.7904, 0.5280, 0.3381,  ..., 0.3225, 0.2363, 0.5819]]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's create an example `nn.Conv2d()` with various parameters:\n",
+        "* `in_channels` (int) - Number of channels in the input image.\n",
+        "* `out_channels` (int) - Number of channels produced by the convolution.\n",
+        "* `kernel_size` (int or tuple) - Size of the convolving kernel/filter.\n",
+        "* `stride` (int or tuple, optional) - How big of a step the convolving kernel takes at a time. Default: 1.\n",
+        "* `padding` (int, tuple, str) - Padding added to all four sides of input. Default: 0."
+      ],
+      "metadata": {
+        "id": "sh4umgRwfHlN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# Create a convolutional layer with same dimensions as TinyVGG\n",
+        "conv_layer = nn.Conv2d(in_channels=3,\n",
+        "                       out_channels=10,\n",
+        "                       kernel_size=3,\n",
+        "                       stride=1,\n",
+        "                       padding=0) # also try using \"valid\" or \"same\" here\n",
+        "\n",
+        "# Pass the data through the convolutional layer\n",
+        "conv_layer(test_image)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0bmh-cd9cumc",
+        "outputId": "5dfea574-05e1-46ae-bd10-8ef5883bd213"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 5.0283e-01,  5.0200e-01,  4.5051e-01,  ...,  4.4432e-01,\n",
+              "           2.6188e-01,  6.8201e-01],\n",
+              "         [ 3.7662e-01,  2.4765e-01,  4.6366e-01,  ...,  1.4024e-01,\n",
+              "           6.2231e-01,  7.2712e-01],\n",
+              "         [ 2.4118e-01,  3.5424e-01,  4.0518e-01,  ...,  2.6405e-01,\n",
+              "           4.3378e-01,  3.5514e-01],\n",
+              "         ...,\n",
+              "         [ 3.2832e-01,  3.8623e-01,  4.7824e-01,  ...,  7.0848e-01,\n",
+              "           6.2558e-01,  2.7159e-01],\n",
+              "         [ 7.0773e-01,  5.7052e-01,  3.4484e-01,  ...,  7.7809e-01,\n",
+              "           6.7647e-01,  4.1289e-01],\n",
+              "         [ 3.9003e-01,  4.2542e-01,  6.2664e-01,  ...,  4.7774e-01,\n",
+              "           5.2218e-01,  5.2645e-01]],\n",
+              "\n",
+              "        [[ 3.1393e-02, -7.5304e-01,  1.8234e-01,  ...,  2.2850e-02,\n",
+              "          -4.9624e-02,  9.6472e-02],\n",
+              "         [-1.3648e-02, -5.4306e-02,  2.1485e-01,  ..., -2.8002e-01,\n",
+              "           3.1697e-01, -2.2899e-01],\n",
+              "         [-1.8292e-01, -2.2629e-01, -2.0743e-01,  ..., -6.5086e-02,\n",
+              "          -4.5262e-02, -2.0923e-01],\n",
+              "         ...,\n",
+              "         [-1.9368e-01,  2.3757e-01,  1.4728e-02,  ...,  3.0663e-01,\n",
+              "           1.4576e-01,  1.5209e-01],\n",
+              "         [ 7.3126e-02, -1.6195e-01,  2.3379e-02,  ...,  6.4819e-02,\n",
+              "           8.1521e-03, -5.9956e-01],\n",
+              "         [ 6.4967e-02,  2.0924e-01,  1.2539e-01,  ..., -1.2443e-01,\n",
+              "          -8.6502e-02, -1.7342e-01]],\n",
+              "\n",
+              "        [[-1.6483e-01,  3.4153e-01, -8.8462e-02,  ...,  2.5695e-01,\n",
+              "           2.2815e-01, -2.3010e-02],\n",
+              "         [ 5.7738e-02,  1.5341e-01,  7.2878e-02,  ...,  1.7558e-01,\n",
+              "          -1.5241e-01,  2.1613e-01],\n",
+              "         [ 1.3573e-01,  1.3258e-01,  1.9318e-01,  ..., -1.2042e-01,\n",
+              "           1.9087e-01,  2.3707e-02],\n",
+              "         ...,\n",
+              "         [ 2.1035e-01,  1.5090e-01,  3.6361e-01,  ..., -1.6065e-01,\n",
+              "           1.5051e-01,  1.7420e-01],\n",
+              "         [ 4.9244e-02, -1.2135e-01,  3.2423e-02,  ...,  1.1785e-01,\n",
+              "           2.6445e-01,  2.0760e-01],\n",
+              "         [ 1.8519e-02,  2.9714e-01, -1.1666e-02,  ...,  1.4065e-01,\n",
+              "           1.3122e-01,  5.1427e-03]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[-2.3087e-02, -1.0287e-01,  1.2401e-01,  ..., -2.3216e-01,\n",
+              "          -7.9903e-02,  1.4904e-03],\n",
+              "         [-4.0135e-02,  1.3954e-01, -2.0493e-01,  ..., -2.2976e-02,\n",
+              "           4.5766e-02,  5.5004e-02],\n",
+              "         [-2.7644e-02,  3.0029e-01, -3.5657e-02,  ...,  1.0317e-01,\n",
+              "          -1.3883e-01,  1.8729e-01],\n",
+              "         ...,\n",
+              "         [-1.0451e-01, -6.5803e-02, -3.9699e-02,  ...,  4.7658e-02,\n",
+              "           1.6334e-01, -9.1258e-03],\n",
+              "         [-6.9965e-02,  3.7640e-03, -8.2798e-02,  ..., -1.8513e-02,\n",
+              "           1.2481e-01,  1.5084e-01],\n",
+              "         [-2.4069e-01, -1.2170e-01, -8.7660e-02,  ..., -1.8426e-02,\n",
+              "          -8.9136e-02,  1.9961e-02]],\n",
+              "\n",
+              "        [[-2.1779e-01, -3.3332e-01, -1.1427e-01,  ...,  2.8806e-01,\n",
+              "           2.2541e-02, -1.3307e-01],\n",
+              "         [-2.5206e-02,  4.1839e-02,  3.0186e-01,  ...,  7.3881e-02,\n",
+              "          -1.2973e-01, -2.0134e-01],\n",
+              "         [-6.2491e-02, -3.8246e-01, -3.1064e-01,  ..., -7.4578e-02,\n",
+              "          -5.3374e-02, -1.3594e-01],\n",
+              "         ...,\n",
+              "         [-3.3742e-01,  2.0460e-01,  1.3655e-02,  ..., -1.2739e-01,\n",
+              "          -4.1174e-02,  3.3726e-01],\n",
+              "         [-1.0976e-01,  3.5307e-02, -1.2394e-01,  ..., -1.4234e-01,\n",
+              "          -1.7106e-01, -3.9711e-01],\n",
+              "         [ 1.4823e-01,  3.0868e-04,  1.5257e-01,  ...,  1.2888e-01,\n",
+              "          -7.3697e-02, -3.0285e-01]],\n",
+              "\n",
+              "        [[-8.1086e-01, -6.5686e-01, -6.6304e-01,  ..., -5.0813e-01,\n",
+              "          -3.9900e-01, -1.7443e-01],\n",
+              "         [-7.2455e-01, -1.8717e-01, -4.6174e-01,  ..., -5.3536e-01,\n",
+              "          -6.1813e-01, -5.7539e-01],\n",
+              "         [-7.8552e-01, -3.4457e-01, -6.9867e-01,  ..., -2.9918e-01,\n",
+              "          -9.1975e-01, -3.8618e-01],\n",
+              "         ...,\n",
+              "         [-4.1826e-01, -6.3205e-01, -5.2848e-01,  ..., -2.8383e-01,\n",
+              "          -5.5833e-01, -6.4915e-01],\n",
+              "         [-4.9681e-01, -2.7646e-01, -2.1324e-01,  ..., -6.8005e-01,\n",
+              "          -8.1551e-01, -7.6373e-01],\n",
+              "         [-3.8026e-01, -5.5956e-01, -5.9949e-01,  ..., -5.9591e-01,\n",
+              "          -5.2976e-01, -3.8921e-01]]], grad_fn=<SqueezeBackward1>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7PbnnawFbYPv"
+        "id": "X4Pe2Ir6eX5X"
       },
       "execution_count": null,
       "outputs": []
