--- a/10_pytorch_model_deployment.ipynb
+++ b/10_pytorch_model_deployment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcbsnfyGmB4R/1JZnuJFi5",
+      "authorship_tag": "ABX9TyME2WOEEgBnU52M+JtJExZK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,6 +131,87 @@
       "source": [
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "device"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vCzliA9jsXcN"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/09_pytorch_model_deployment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "\n",
+        "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/09_pytorch_model_deployment.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/09_pytorch_model_deployment.pdf)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wVtZ4t-MsXct"
+      },
+      "source": [
+        "## 1. Getting data\n",
+        "\n",
+        "We left off in [08. PyTorch Paper Replicating](https://www.learnpytorch.io/08_pytorch_paper_replicating/#106-save-feature-extractor-vit-model-and-check-file-size) comparing our own Vision Transformer (ViT) feature extractor model to the EfficientNetB2 (EffNetB2) feature extractor model we created in [07. PyTorch Experiment Tracking](https://www.learnpytorch.io/07_pytorch_experiment_tracking/#9-load-in-the-best-model-and-make-predictions-with-it).\n",
+        "\n",
+        "And we found that there was a slight difference in the comparison.\n",
+        "\n",
+        "The EffNetB2 model was trained on 20% of the pizza, steak and sushi data from Food101 where as the ViT model was trained on 10%.\n",
+        "\n",
+        "Since our goal is to deploy the best model for our FoodVision Mini problem, let's start by downloading the [20% pizza, steak and sushi dataset](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/data/pizza_steak_sushi_20_percent.zip) and train an EffNetB2 feature extractor and ViT feature extractor on it and then compare the two models.\n",
+        "\n",
+        "This way we'll be comparing apples to apples (one model trained on a dataset to another model trained on the same dataset).\n",
+        "\n",
+        "> **Note:** The dataset we're downloading is a sample of the entire [Food101 dataset](https://pytorch.org/vision/main/generated/torchvision.datasets.Food101.html#food101) (101 food classes with 1,000 images each). More specifically, 20% refers to 20% of images from the pizza, steak and sushi classes selected at random. You can see how this dataset was created in [`extras/04_custom_data_creation.ipynb`](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/extras/04_custom_data_creation.ipynb) and more details in [04. PyTorch Custom Datasets section 1](https://www.learnpytorch.io/04_pytorch_custom_datasets/#1-get-data).\n",
+        "\n",
+        "We can download the data using the `download_data()` function we created in [07. PyTorch Experiment Tracking section 1](https://www.learnpytorch.io/07_pytorch_experiment_tracking/#1-get-data) from [`helper_functions.py`](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/helper_functions.py)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lcIm3a1BsXct",
+        "outputId": "bf623c3b-7b76-4a3e-f248-397888a7d467"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[INFO] data/pizza_steak_sushi_20_percent directory exists, skipping download.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "PosixPath('data/pizza_steak_sushi_20_percent')"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Download pizza, steak, sushi images from GitHub\n",
+        "data_20_percent_path = download_data(source=\"https://github.com/mrdbourke/pytorch-deep-learning/raw/main/data/pizza_steak_sushi_20_percent.zip\",\n",
+        "                                     destination=\"pizza_steak_sushi_20_percent\")\n",
+        "\n",
+        "data_20_percent_path"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6OTbD-YqsXcu"
+      },
+      "outputs": [],
+      "source": [
+        "# Setup directory paths to train and test images\n",
+        "train_dir = data_20_percent_path / \"train\"\n",
+        "test_dir = data_20_percent_path / \"test\""
       ]
     }
   ]
